# target-google-people

./: .gitignore  README.md  meltano.yml  pyproject.toml
target_google_people/: google_people_service.py  sinks.py  target.py
target_google_people/tests/: __init__.py  test_core.py
tests/target_google_people/: test_google_people_service.py
